fixed a flex wrap issue

--- a/src/components/Head/Navbar.module.css
+++ b/src/components/Head/Navbar.module.css
@@ -8,11 +8,10 @@
   align-items: center;
   z-index: 10;
   box-shadow: 0 4px 8px rgba(0, 0, 0, 0.2);
-  flex-wrap: wrap;
 }
 .logo {
-  width: 130px;
-  height: 59px;
+  max-width: 130px;
+  max-height: 59px;
   margin: 2px;
   margin-top: 10px;
 }
@@ -108,6 +107,7 @@
   .container {
     position: relative;
     height: 110px;
+    flex-wrap: wrap;
   }
   .welcome {
     display: none;
