--- a/src/components/Head/SearchBar.module.css
+++ b/src/components/Head/SearchBar.module.css
@@ -15,7 +15,7 @@
   background-color: #72ddf7;
 }
 .searchBar {
-  width: 90%;
+  width: 50%;
   height: 95%;
   margin: 0;
   padding: 10px;
